--- a/notebooks/paul_model_deep.ipynb
+++ b/notebooks/paul_model_deep.ipynb
@@ -459,7 +459,7 @@
    "source": [
     "import pandas as pd\n",
     "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense, Dropout\n",
+    "from tensorflow.keras.layers import Dense, Dropout, LSTM\n",
     "from tensorflow.keras.utils import to_categorical\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import LabelEncoder\n",
@@ -475,10 +475,7 @@
     "y = encoder.fit_transform(y)\n",
     "\n",
     "# diviser les données en ensembles de formation et de test\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "\n",
-    "X.shape"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
    ]
   },
   {
@@ -551,7 +548,7 @@
     "# petit earlystopping des familles\n",
     "early_stopping = EarlyStopping(monitor='val_loss', patience=10)\n",
     "# définir le modèle\n",
-    "model = Sequential()\n",
+    "model = Sequential(probability=True)\n",
     "model.add(Dense(128, input_dim=X_train.shape[1], activation='relu'))\n",
     "model.add(Dense(256, activation='relu'))\n",
     "model.add(Dropout(0.2)) \n",
