--- a/notebooks/thierry_lstm_new.ipynb
+++ b/notebooks/thierry_lstm_new.ipynb
@@ -2110,9 +2110,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense, LSTM, Dropout\n",
-    "from tensorflow.keras.callbacks import EarlyStopping"
+    "from tensorflow.lite.keras.models import Sequential\n",
+    "from tensorflow.lite.keras.layers import Dense, LSTM, Dropout\n",
+    "from tensorflow.lite.keras.callbacks import EarlyStopping"
    ]
   },
   {
